@@ -1,0 +1,10 @@
+
+use strict;
+use warnings;
+
+package Dist::Zilla::Plugin::BrokenPlugin;
+
+die "This plugin is broken!";
+
+0;
+
