@@ -1,0 +1,12 @@
+use strict;
+
+use warnings;
+
+package Dist::Zilla::Plugin::BrokenPlugin;
+
+BEGIN {
+  die "This plugin is broken!";
+}
+
+0;
+
