@@ -1,0 +1,10 @@
+use strict;
+
+use warnings;
+
+package Dist::Zilla::Plugin::BrokenPlugin;
+
+sub {
+
+0;
+
