@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+          Add Tests for Config::MVP 2.200 changes. ( Kent Fredric )
+
           MetaNoIndex, originally by J.T. Smith and Mark Gardner, is now
           included
 
